# tgbot_02_teleton

./: .gitignore  README.md  pyproject.toml
bot_app/: .env.example  main.py  requests_to_ai.py  taskiq_broker.py  tasks.py
